--- a/editabletemplate.html
+++ b/editabletemplate.html
@@ -247,7 +247,7 @@ $(document).on('silex.resize', function() {
   <p>
    <a href="#!page-connexion">Connexion</a>
  </p>
-</div></div></div><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" data-silex-id="silex-id-1537542841131-2" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div><div data-silex-type="html" class="editable-style html-element hide-on-mobile silex-id-1564055844089-4 paged-element page-accueil_en page-prensentation_en page-partenaires_en page-fontaine_en page-donnees_en page-hal_en page-workshop1_en page-workshop2_en page-workshop3_en page-workshop4_en page-workshop5_en page-workshop6_en page-rencontre_en page-karstmod_en page-paprika_en page-contact_en" data-silex-id="silex-id-1564055844089-4"><div class="silex-element-content"><ul id="menu-demo2">
+</div></div></div><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" data-silex-id="silex-id-1537542841131-2" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div><div data-silex-type="html" class="editable-style html-element hide-on-mobile silex-id-1564055844089-4 paged-element page-accueil_en page-prensentation_en page-partenaires_en page-fontaine_en page-donnees_en page-hal_en page-workshop1_en page-workshop2_en page-workshop3_en page-workshop4_en page-workshop5_en page-workshop6_en page-rencontre_en page-karstmod_en page-paprika_en page-contact_en page-connexion_en" data-silex-id="silex-id-1564055844089-4"><div class="silex-element-content"><ul id="menu-demo2">
 	<li><a href="#!page-accueil" class="">Home</a>
 		<ul>
 			<li><a href="#!page-presentation" class="">About us</a></li>
@@ -290,7 +290,7 @@ $(document).on('silex.resize', function() {
 			<li><a href="#!page-paprika" class="">Plugin PaPRIKa</a></li>
 		</ul>
 	</li>
-</ul></div></div><div data-silex-type="html" class="editable-style html-element con hide-on-mobile silex-id-1564405429909-58 page-accueil_en paged-element page-prensentation_en page-partenaires_en page-fontaine_en page-donnees_en page-hal_en page-workshop1_en page-workshop2_en page-workshop3_en page-workshop4_en page-workshop5_en page-workshop6_en page-rencontre_en page-karstmod_en page-paprika_en page-contact_en page-connexion_en" data-silex-id="silex-id-1564405429909-58" data-silex-href="#!page-accueil_en"><div class="silex-element-content"><div class="connexion">
+</ul></div></div><div data-silex-type="html" class="editable-style html-element con hide-on-mobile silex-id-1564405429909-58 page-accueil_en paged-element page-prensentation_en page-partenaires_en page-fontaine_en page-donnees_en page-hal_en page-workshop1_en page-workshop2_en page-workshop3_en page-workshop4_en page-workshop5_en page-workshop6_en page-rencontre_en page-karstmod_en page-paprika_en page-contact_en page-connexion_en" data-silex-id="silex-id-1564405429909-58" data-silex-href="#!page-connexion_en"><div class="silex-element-content"><div class="connexion">
   <p>
    <a href="#!page-connexion_en">Log In</a>
  </p>
