--- a/editabletemplate.html
+++ b/editabletemplate.html
@@ -248,46 +248,46 @@ $(document).on('silex.resize', function() {
    <a href="#!page-connexion">Connexion</a>
  </p>
 </div></div></div><div data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" data-silex-id="silex-id-1537542841131-2" style="" data-silex-href="#!page-accueil"><div class="silex-element-content normal"><h1>SnoKarst</h1></div></div><div data-silex-type="html" class="editable-style html-element hide-on-mobile silex-id-1564055844089-4 paged-element page-accueil_en page-prensentation_en page-partenaires_en page-fontaine_en page-donnees_en page-hal_en page-workshop1_en page-workshop2_en page-workshop3_en page-workshop4_en page-workshop5_en page-workshop6_en page-rencontre_en page-karstmod_en page-paprika_en page-contact_en page-connexion_en" data-silex-id="silex-id-1564055844089-4"><div class="silex-element-content"><ul id="menu-demo2">
-	<li><a href="#!page-accueil" class="">Home</a>
+	<li><a href="#!page-accueil_en" class="">Home</a>
 		<ul>
-			<li><a href="#!page-presentation" class="">About us</a></li>
-			<li><a href="#!page-partenaires" class="">Team and partners</a></li>
+			<li><a href="#!page-presentation_en" class="">About us</a></li>
+			<li><a href="#!page-partenaires_en" class="">Team and partners</a></li>
 		</ul>
 	</li>
 	<li><a href="#">Obervatories</a>
 		<ul>
-			<li><a href="#!page-fontaine" class="">Fontaine de Vaucluse</a></li>
-			<li><a href="#!page-moulis">Moulis</a></li>
-			<li><a href="#!page-val">Val d'Orléans</a></li>
-			<li><a href="#!page-craie">Karst de la craie</a></li>
-			<li><a href="#!page-medycyss">Medycyss</a></li>
-			<li><a href="#!page-nimes">Fontaine de Nîmes</a></li>
-			<li><a href="#!page-miou">Port Miou</a></li>
-			<li><a href="#!page-jurrasic">Jurassic Karst</a></li>
-			<li><a href="#!page-aquitains">Karsts Aquitains</a></li>
+			<li><a href="#!page-fontaine_en" class="">Fontaine de Vaucluse</a></li>
+			<li><a href="#!page-moulis_en">Moulis</a></li>
+			<li><a href="#!page-val_en">Val d'Orléans</a></li>
+			<li><a href="#!page-craie_en">Karst de la craie</a></li>
+			<li><a href="#!page-medycyss_en">Medycyss</a></li>
+			<li><a href="#!page-nimes_en">Fontaine de Nîmes</a></li>
+			<li><a href="#!page-miou_en">Port Miou</a></li>
+			<li><a href="#!page-jurrasic_en">Jurassic Karst</a></li>
+			<li><a href="#!page-aquitains_en">Karsts Aquitains</a></li>
 		</ul>
 	</li>
 		<li><a href="#">Data</a>
 		<ul>
-			<li><a href="#!page-donnees" class="">Our data</a></li>
-			<li><a href="#!page-hal">Our doc on HAL</a></li>
+			<li><a href="#!page-donnees_en" class="">Our data</a></li>
+			<li><a href="#!page-hal_en">Our doc on HAL</a></li>
 		</ul>
 	</li>
 	<li><a href="#">Member Space</a>
 		<ul>
-			<li><a href="#!page-worksop1">Workshop 1</a></li>
-			<li><a href="#!page-worksop2">Workshop 2</a></li>
-			<li><a href="#!page-worksop3">Workshop 3</a></li>
-			<li><a href="#!page-worksop4">Workshop 4</a></li>
-			<li><a href="#!page-worksop5">Workshop 5</a></li>
-			<li><a href="#!page-worksop6">Workshop 6</a></li>
-			<li><a href="#!page-rencontre">First meeting</a></li>
+			<li><a href="#!page-worksop1_en">Workshop 1</a></li>
+			<li><a href="#!page-worksop2_en">Workshop 2</a></li>
+			<li><a href="#!page-worksop3_en">Workshop 3</a></li>
+			<li><a href="#!page-worksop4_en">Workshop 4</a></li>
+			<li><a href="#!page-worksop5_en">Workshop 5</a></li>
+			<li><a href="#!page-worksop6_en">Workshop 6</a></li>
+			<li><a href="#!page-rencontre_en">First meeting</a></li>
 		</ul>
 	</li>
 	<li><a href="#">Softwares</a>
 		<ul>
-			<li><a href="#!page-karstmod">KASTMOD</a></li>
-			<li><a href="#!page-paprika" class="">Plugin PaPRIKa</a></li>
+			<li><a href="#!page-karstmod_en">KASTMOD</a></li>
+			<li><a href="#!page-paprika_en" class="">Plugin PaPRIKa</a></li>
 		</ul>
 	</li>
 </ul></div></div><div data-silex-type="html" class="editable-style html-element con hide-on-mobile silex-id-1564405429909-58 page-accueil_en paged-element page-prensentation_en page-partenaires_en page-fontaine_en page-donnees_en page-hal_en page-workshop1_en page-workshop2_en page-workshop3_en page-workshop4_en page-workshop5_en page-workshop6_en page-rencontre_en page-karstmod_en page-paprika_en page-contact_en page-connexion_en" data-silex-id="silex-id-1564405429909-58" data-silex-href="#!page-connexion_en"><div class="silex-element-content"><div class="connexion">
