--- a/connexion.html
+++ b/connexion.html
@@ -85,7 +85,7 @@
   close();
 })();
 </script>
-</div></div><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a><a href="connexion.html" data-silex-type="html" class="editable-style silex-id-1564058193055-10 html-element page-accueil paged-element hide-on-mobile page-presentation page-partenaires page-fontaine page-donnees page-hal page-workshop1 page-workshop2 page-workshop3 page-workshop4 page-workshop5 page-workshop6 page-rencontre page-karstmod page-paprika page-contact page-connexion page-moulis page-val page-craie page-medycyss page-miou page-jurassic page-aquitains connexion page-link-active"><div class="silex-element-content"><div class="connexion">
+</div></div><a href="index.html" data-silex-type="text" class="editable-style silex-id-1537542841131-2 text-element header" style=""><div class="silex-element-content normal"><h1>SnoKarst</h1></div></a><a href="connexion.html" data-silex-type="html" class="editable-style silex-id-1564058193055-10 html-element page-accueil paged-element page-presentation page-partenaires page-fontaine page-donnees page-hal page-workshop1 page-workshop2 page-workshop3 page-workshop4 page-workshop5 page-workshop6 page-rencontre page-karstmod page-paprika page-contact page-connexion page-moulis page-val page-craie page-medycyss page-miou page-jurassic page-aquitains connexion hide-on-mobile page-link-active"><div class="silex-element-content"><div class="connexion">
   <p>
    <a href="connexion.html" class="page-link-active">Connexion</a>
  </p>
